--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,94 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  border: none;
+  background-color: transparent;
+}
+
+img {
+  width: 1.3rem;
+
+}
+
+a:link,
+a:visited {
+  text-decoration: none;
+  color: black;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: 'Libre Franklin', Helvetica, sans-serif;
+}
+
+.flex {
+  display: flex;
+}
+
+/* Header */
+.header {
+  height: 4.4rem;
+  background-color: white;
+  border-bottom: 1px solid #e2e2e2;
+}
+
+.header__container {
+  margin: 0 2.6rem;
+  padding: .4rem 1.5rem .2rem 1.5rem;
+  align-items: center;
+
+}
+.header__button {
+  display: inline-block;
+  width: 3.3rem;
+  height: 3.3rem;
+  margin-right: .8rem;
+  cursor: pointer;
+  text-align: center;
+  }
+.header__button:hover {
+    background-color: #f7f7f7;
+    border-radius: .3rem;
+
+  }
+
+.header__text:link {
+    line-height: 1.9rem;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: .1rem;
+    
+  }
+
+.header__logo {
+  display: inline-block;
+  height: 2.6rem;
+  margin: 0 auto;
+  justify-self: center;
+}
+
+.btn {
+  background-color: rgb(86, 123, 149);
+  color: white;
+  cursor: pointer;
+  height: 3.2rem;
+  font-weight: 700;
+  font-size: 1.1rem;
+  border-radius: .3rem;
+  border: 1px solid rgb(50, 104, 145);
+  padding: 11px 12px 8px;
+  text-transform: uppercase;
+  line-height: 1.1rem;
+  margin-right: .7rem;
+}
+
 rect[Attributes Style] {
   x: 1;
   y: 3;
@@ -12,3 +103,5 @@ rect[Attributes Style] {
   vertical-align: sub;
   width: 16px;
 }
+
+
