--- a/css/main.css
+++ b/css/main.css
@@ -12,3 +12,26 @@ rect[Attributes Style] {
   vertical-align: sub;
   width: 16px;
 }
+
+.css-1uqx5yl {
+  border-radius: 3px;
+  cursor: pointer;
+  font-family: nyt-franklin, helvetica, arial, sans-serif;
+  -webkit-transition: ease 0.6s;
+  transition: ease 0.6s;
+  white-space: nowrap;
+  vertical-align: middle;
+  background-color: transparent;
+  color: #000;
+  font-size: 11px;
+  line-height: 11px;
+  font-weight: 700;
+  -webkit-letter-spacing: 0.02em;
+  -moz-letter-spacing: 0.02em;
+  -ms-letter-spacing: 0.02em;
+  letter-spacing: 0.02em;
+  padding: 11px 12px 8px;
+  border: 0;
+  padding: 8px 9px;
+  text-transform: uppercase;
+}
