--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+*, div, h1, main, img, body {
+  border: 0.1px solid red;
+}
+
 button {
   border: none;
   background-color: transparent;
@@ -23,6 +27,24 @@ html {
 
 body {
   font-family: 'Libre Franklin', Helvetica, sans-serif;
+}
+
+main {
+  margin: auto;
+}
+
+h1 {
+  color: rgb(18, 18, 18);
+  font-family: nyt-cheltenham, georgia, 'times new roman', times, serif;
+  font-weight: 700;
+  font-style: italic;
+  max-width: 600px;
+  font-size: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1rem;
+  font-stretch: 100%;
+  line-height: 48px;
 }
 
 .flex {
@@ -88,17 +110,32 @@ body {
   margin-right: .7rem;
 }
 
-rect[Attributes Style] {
-  x: 1;
-  y: 3;
-  fill: rgb(51, 51, 51);
-  width: 14;
-  height: 2;
-}
-
-.css-1fe7a5q {
+.menuIconSvg {
   display: inline-block;
   height: 16px;
   vertical-align: sub;
   width: 16px;
+}
+
+
+/*Body*/
+
+.mainPhotoImg {
+  display: block;
+  width: 943px;
+  margin: auto;
+}
+
+.mainPhotoFigCaption {
+  display: inline;
+  font-family: nyt-imperial, georgia, 'times new roman', times, serif;
+  color: rgb(102, 102, 102);
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 20px;
+  max-width: 720px;
+}
+
+.mainPhotoFigure {
+  display: block;
 }
