--- a/css/classes.css
+++ b/css/classes.css
@@ -113,6 +113,7 @@
   display: block;
   margin-left: 343.5px;
   width: 600px;
+  margin-bottom: 25px;
 }
 
 .commonIconsNav {
@@ -192,4 +193,31 @@
   border-image: initial;
   overflow: visible;
   padding: 0px 0px 4px;
+}
+
+.mainTextDiv {
+  display: block;
+  width: 600px;
+  margin: auto;
+  font-family: nyt-imperial, georgia, "times new roman", times, serif;
+  font-size: 20px;
+  font-stretch: 100%;
+  font-style: normal;
+  font-variant-caps: normal;
+  font-variant-east-asian: normal;
+  font-variant-ligatures: normal;
+  font-variant-numeric: normal;
+  font-weight: 400;
+  line-height: 30px;
+}
+
+.advertisementDiv {
+  color: rgb(51, 51, 51);
+  font-family: nyt-franklin, helvetica, arial, sans-serif;
+  font-size: 15px;
+  font-stretch: 100%;
+  font-weight: 700;
+  text-align: center;
+  line-height: 19px;
+  margin: 25px 0;
 }
