--- a/css/states.css
+++ b/css/states.css
@@ -1,6 +1,5 @@
 a:link, a:visited {
   text-decoration: none;
-  color: black;
 }
 
 .shareIconsSvg:hover {
@@ -14,4 +13,28 @@ a:link, a:visited {
 .saveIconSvg:hover {
   cursor: pointer;
   opacity: 40%;
+}
+
+.textStartHeader::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.advertisementDiv:before {
+  display: block;
+  margin: auto;
+  padding-top: 19px;
+  content: " ";
+  width: 72px;
+  border-top: 1px solid rgb(204, 204, 204);
+}
+
+.advertisementDiv:after {
+  display: block;
+  margin: auto;
+  padding-bottom: 19px;
+  content: " ";
+  width: 72px;
+  border-bottom: 1px solid rgb(204, 204, 204);
 }
