--- a/css/states.css
+++ b/css/states.css
@@ -38,3 +38,13 @@ a:link, a:visited {
   width: 72px;
   border-bottom: 1px solid rgb(204, 204, 204);
 }
+
+section footer:before {
+  content: "";
+  color: red;
+  margin-top: 100px;
+  width: 40px;
+  height: 10px;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+}
