--- a/css/tags.css
+++ b/css/tags.css
@@ -1,3 +1,13 @@
+p a {
+  text-decoration: none;
+  color: rgb(50, 104, 145);
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 time {
   color: rgb(51, 51, 51);
   font-family: nyt-franklin, helvetica, arial, sans-serif;
@@ -52,10 +62,6 @@ main>h1 {
 svg {
   width: min-content;
   height: min-content;
-}
-
-a {
-  color: rgb(50, 104, 145);
 }
 
 h3 {
