--- a/css/tags.css
+++ b/css/tags.css
@@ -4,12 +4,11 @@ p a {
 }
 
 a {
-  color: inherit;
   text-decoration: none;
+  color: black;
 }
 
-time {
-  color: rgb(51, 51, 51);
+header+time {
   font-family: nyt-franklin, helvetica, arial, sans-serif;
   font-size: 13px;
   font-stretch: 100%;
