--- a/css/classes.css
+++ b/css/classes.css
@@ -521,6 +521,13 @@ section footer {
 
 .footer header{
   height: 44px;
+  margin-bottom: 10px;
+}
+
+.footer h2 {
+  font-size: 13px;
+  color: rgb(51, 51, 51);
+  margin-bottom: 10px;
 }
 
 .footer header::after {
@@ -544,9 +551,61 @@ section footer {
   margin-top: -50px;
 }
 
-.links-container ul li {
+.footer-container{
+  justify-content: space-between;
+}
+
+.links-container ul li{
   text-transform: capitalize;
   font-weight: 500px;
-  font-size: 14px;
+  font-size: 13px;
   height: 23px
+}
+
+
+.links-container:last-child{
+  padding: 20px;
+  border-left: 1px solid rgb(226, 226, 226);
+}
+
+.css-r5ic95 {
+  height: 13px;
+  width: 13px;
+  margin-right: 7px;
+}
+
+.css-1oyjjn8{
+  color: black;
+  font-size: 16px;
+  font-weight: 600;
+
+}
+
+.css-1jmp9xk{
+  font-size: 11px;
+
+}
+
+.border-ma{
+  display: inline-block;
+  border-top: 1px solid rgb(226, 226, 226);
+  margin-top: 5px;
+  padding-top: 10px;
+  width: 180px;
+}
+
+.css-tj0ten{
+  display: block;
+  padding-bottom: 10px;
+}
+
+.css-15uy5yv {
+  border-top: 1px solid rgb(226, 226, 226);
+  padding: 10px;
+  margin: 10px;
+}
+
+.css-1ho5u4o{
+  display: flex;
+  justify-content: space-between;
 }
